page-results fix overflow off screen
Long titles/descriptions caused the elements to become wider than
the screen and overflow to the right, making the page scrollable
horizontally. Also got rid of a rather ugly hack with margins
and positioning... Much cleaner solution.

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* Copyright (c) 2014 Viljo Viitanen */
+/* Copyright (c) 2014-2015 Viljo Viitanen */
 body {
   font-family: sans-serif;
 }
@@ -28,26 +28,23 @@ core-item[lines] {
   border-bottom: 1px solid rgba(0,0,0,0.1);
   width: 100%;
   height: 49px;
+  white-space: nowrap;
+  overflow: hidden;
 }
 .title {
-  height: 48px;
   line-height: 49px;
-  float: left;
   padding-left: 5px;
   white-space: nowrap;
+  overflow: hidden;
 }
 @media (min-width: 575px) {
   .desc {
   padding-left: 5px;
   font-size: smaller;
   color: #888;
-  height: 48px;
   line-height: 51px;
-  float: left;
-  margin-left: -2000px;
-  position: relative;
-  left: 2000px;
   white-space: nowrap;
+  overflow: hidden;
   }
 }
 @media (max-width: 574px) {
@@ -63,9 +60,9 @@ core-item[lines] {
   height: 48px;
   line-height: 51px;
   float: right;
-  margin-right: -2000px;
-  position: relative;
-  left: -2000px;
+  position: absolute;
+  right: 0px;
+  top: 0px;
   padding-left: 30px;
   padding-right: 5px;
 }
